--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,21 @@
 [submodule "deps/openxr"]
 	path = deps/openxr
 	url = https://github.com/khronosgroup/openxr-sdk
+[submodule "deps/glslang"]
+	path = deps/glslang
+	url = https://github.com/KhronosGroup/glslang
+[submodule "deps/vulkan-headers"]
+	path = deps/vulkan-headers
+	url = https://github.com/KhronosGroup/Vulkan-Headers
+[submodule "plugins/lua-enet"]
+	path = plugins/lua-enet
+	url = https://github.com/bjornbytes/lua-enet
+[submodule "plugins/lovr-http"]
+	path = plugins/lovr-http
+	url = https://github.com/bjornbytes/lovr-http
+[submodule "deps/tracy"]
+	path = deps/tracy
+	url = https://github.com/wolfpld/tracy
+[submodule "deps/joltc"]
+	path = deps/joltc
+	url = https://github.com/amerkoleci/joltc
