--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,27 @@
 [submodule "deps/glfw"]
 	path = deps/glfw
-	url = https://github.com/bjornbytes/lovr/deps/glfw
+	url = https://github.com/glfw/glfw.git
 [submodule "deps/msdfgen"]
 	path = deps/msdfgen
-	url = https://github.com/bjornbytes/lovr/deps/msdfgen
+	url = https://github.com/bjornbytes/msdfgen
 [submodule "deps/openxr"]
 	path = deps/openxr
-	url = https://github.com/bjornbytes/lovr/deps/openxr
+	url = https://github.com/khronosgroup/openxr-sdk
 [submodule "deps/glslang"]
 	path = deps/glslang
-	url = https://github.com/bjornbytes/lovr/deps/glslang
+	url = https://github.com/KhronosGroup/glslang
 [submodule "deps/vulkan-headers"]
 	path = deps/vulkan-headers
-	url = https://github.com/bjornbytes/lovr/deps/vulkan-headers
+	url = https://github.com/KhronosGroup/Vulkan-Headers
 [submodule "plugins/lua-enet"]
 	path = plugins/lua-enet
-	url = https://github.com/bjornbytes/lovr/plugins/lua-enet
+	url = https://github.com/bjornbytes/lua-enet
 [submodule "plugins/lovr-http"]
 	path = plugins/lovr-http
-	url = https://github.com/bjornbytes/lovr/plugins/lovr-http
+	url = https://github.com/bjornbytes/lovr-http
 [submodule "deps/tracy"]
 	path = deps/tracy
-	url = https://github.com/bjornbytes/lovr/deps/tracy
+	url = https://github.com/wolfpld/tracy
 [submodule "deps/joltc"]
 	path = deps/joltc
-	url = https://github.com/bjornbytes/lovr/deps/joltc
+	url = https://github.com/amerkoleci/joltc
