--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,6 @@ option(LOVR_ENABLE_TIMER "Enable the timer module" ON)
 option(LOVR_ENABLE_UTF8 "Enable the utf8 module" ON)
 
 option(LOVR_USE_GLFW "Use GLFW for desktop windows" ON)
-option(LOVR_USE_LUAJIT "Use LuaJIT instead of Lua" OFF)
 option(LOVR_USE_GLSLANG "Use glslang to compile GLSL shaders" ON)
 option(LOVR_USE_VULKAN "Use the Vulkan renderer" ON)
 option(LOVR_USE_WEBGPU "Use the WebGPU renderer" OFF)
@@ -37,7 +36,6 @@ option(LOVR_SANITIZE "Enable Address Sanitizer" OFF)
 option(LOVR_PROFILE "Enable Tracy integration" OFF)
 
 option(LOVR_SYSTEM_GLFW "Use the system-provided glfw" OFF)
-option(LOVR_SYSTEM_LUA "Use the system-provided Lua" OFF)
 option(LOVR_SYSTEM_OPENXR "Use the system-provided OpenXR" OFF)
 
 option(LOVR_BUILD_EXE "Build an executable (or an apk on Android)" ON)
@@ -105,33 +103,6 @@ if(LOVR_USE_GLFW AND NOT (EMSCRIPTEN OR ANDROID))
 endif()
 
 # Lua
-if(LOVR_USE_LUAJIT AND NOT EMSCRIPTEN)
-  if(LOVR_SYSTEM_LUA)
-    pkg_search_module(LUAJIT REQUIRED luajit)
-    list(APPEND LOVR_LIB_DIRS ${LUAJIT_LIBRARY_DIRS})
-    set(LOVR_LUA_INCLUDE ${LUAJIT_INCLUDE_DIRS})
-    set(LOVR_LUA_LIB_DIR ${LUAJIT_LIBRARY_DIRS})
-    set(LOVR_LUA ${LUAJIT_LIBRARIES})
-  else()
-    set(BUILD_SHARED_LIBS ON)
-    add_subdirectory(deps/luajit luajit)
-    set_target_properties(luajit PROPERTIES EXCLUDE_FROM_ALL 1)
-    if(MSVC)
-      target_compile_definitions(libluajit PRIVATE _CRT_SECURE_NO_WARNINGS)
-      target_compile_definitions(minilua PRIVATE _CRT_SECURE_NO_WARNINGS)
-      target_compile_definitions(buildvm PRIVATE _CRT_SECURE_NO_WARNINGS)
-    endif()
-    set(LOVR_LUA_INCLUDE deps/luajit/src ${CMAKE_BINARY_DIR}/luajit)
-    set(LOVR_LUA libluajit)
-  endif()
-else()
-  if(LOVR_SYSTEM_LUA)
-    pkg_search_module(LUA REQUIRED lua)
-    list(APPEND LOVR_LIB_DIRS ${LUA_LIBRARY_DIRS})
-    set(LOVR_LUA_INCLUDE ${LUA_INCLUDE_DIRS})
-    set(LOVR_LUA_LIB_DIR ${LUA_LIBRARY_DIRS})
-    set(LOVR_LUA ${LUA_LIBRARIES})
-  else()
     set(LUA_SRC
       lapi.c lauxlib.c lbaselib.c lcode.c ldblib.c ldebug.c ldo.c ldump.c lfunc.c lgc.c linit.c
       liolib.c llex.c lmathlib.c lmem.c loadlib.c lobject.c lopcodes.c loslib.c lparser.c lstate.c
@@ -149,8 +120,6 @@ else()
       target_compile_definitions(lua PRIVATE LUA_USE_DLOPEN)
     endif()
     set(LOVR_LUA lua)
-  endif()
-endif()
 
 # MSDF
 if(LOVR_ENABLE_DATA)
@@ -902,7 +871,7 @@ function(build_lua_module SRC)
     get_filename_component(REL_DIR "${REL_PATH}" DIRECTORY)
     get_filename_component(MODULE_NAME "${SRC_ABS}" NAME_WE)
 
-    set(OUT_DIR "${ASTRAL_RUNTIME_DIR}/bin/Engine/${REL_DIR}")
+    set(OUT_DIR "${ASTRAL_RUNTIME_DIR}/Engine/${REL_DIR}")
     file(MAKE_DIRECTORY "${OUT_DIR}")
 
     add_library(${MODULE_NAME} SHARED "${SRC_ABS}")
