CMake, who hurt you as a child?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -381,8 +381,8 @@ if(LOVR_ENABLE_AUDIO)
   endif()
 
   if(LOVR_USE_OCULUS_AUDIO)
-    target_compile_definitions(lovr PRIVATE LOVR_ENABLE_OCULUS_SPATIALIZER)
-    target_sources(lovr PRIVATE src/modules/audio/spatializer_oculus.c)
+    target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_ENABLE_OCULUS_SPATIALIZER)
+    target_sources(${ASTRAL_TARGET} PRIVATE src/modules/audio/spatializer_oculus.c)
   endif()
 else()
   target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_DISABLE_AUDIO)
@@ -522,16 +522,16 @@ if(LOVR_ENABLE_HEADSET)
   )
 
   if(LOVR_USE_OPENXR)
-    target_compile_definitions(lovr PRIVATE LOVR_USE_OPENXR)
-    target_sources(lovr PRIVATE src/modules/headset/headset_openxr.c)
+    target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_USE_OPENXR)
+    target_sources(${ASTRAL_TARGET} PRIVATE src/modules/headset/headset_openxr.c)
   endif()
   if(LOVR_USE_WEBXR)
-    target_compile_definitions(lovr PRIVATE LOVR_USE_WEBXR)
-    target_sources(lovr PRIVATE src/modules/headset/headset_webxr.c)
+    target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_USE_WEBXR)
+    target_sources(${ASTRAL_TARGET} PRIVATE src/modules/headset/headset_webxr.c)
   endif()
   if(LOVR_USE_SIMULATOR)
-    target_compile_definitions(lovr PRIVATE LOVR_USE_SIMULATOR)
-    target_sources(lovr PRIVATE src/modules/headset/headset_simulator.c)
+    target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_USE_SIMULATOR)
+    target_sources(${ASTRAL_TARGET} PRIVATE src/modules/headset/headset_simulator.c)
   endif()
 else()
   target_compile_definitions(${ASTRAL_TARGET} PRIVATE LOVR_DISABLE_HEADSET)
@@ -685,7 +685,7 @@ endfunction()
 # Platforms
 if(WIN32)
   target_sources(${ASTRAL_TARGET} PRIVATE src/core/os_win32.c etc/lovr.rc)
-  target_sources(lovr PRIVATE etc/lovr.rc)
+  target_sources(${ASTRAL_TARGET} PRIVATE etc/lovr.rc)
   if(MSVC)
     set_target_properties(${ASTRAL_TARGET} PROPERTIES COMPILE_FLAGS /wd4244)
     # Excuse anonymous union for type punning
@@ -701,8 +701,8 @@ if(WIN32)
     set_target_properties(${ASTRAL_TARGET} PROPERTIES COMPILE_FLAGS "-MP")
   endif()
   if(NOT LOVR_BUILD_SHARED)
-    set_target_properties(lovr PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:console /ENTRY:WinMainCRTStartup")
-    set_target_properties(lovr PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows /ENTRY:WinMainCRTStartup")
+    set_target_properties(${ASTRAL_TARGET} PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:console /ENTRY:WinMainCRTStartup")
+    set_target_properties(${ASTRAL_TARGET} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows /ENTRY:WinMainCRTStartup")
   endif()
   target_compile_definitions(${ASTRAL_TARGET} PRIVATE _CRT_SECURE_NO_WARNINGS)
   target_compile_definitions(${ASTRAL_TARGET} PRIVATE _CRT_NONSTDC_NO_WARNINGS)
@@ -874,7 +874,7 @@ elseif(ANDROID)
       COMMAND ${CMAKE_COMMAND} -E remove_directory org
     )
 
-    add_dependencies(buildAPK lovr)
+    add_dependencies(buildAPK ${ASTRAL_TARGET})
 
     if(CMAKE_BUILD_TYPE STREQUAL Release)
       add_custom_target(
@@ -882,7 +882,7 @@ elseif(ANDROID)
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
         COMMAND ${CMAKE_STRIP} raw/lib/${ANDROID_ABI}/*.so
       )
-      add_dependencies(strip lovr)
+      add_dependencies(strip ${ASTRAL_TARGET})
       add_dependencies(buildAPK strip)
     endif()
 
